added pgadmin3 package

--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,32 @@
-.ICEauthority
-.Xauthority
-.aptitude/
-.bash/
-.bash_history
-.bash_logout
-.cache/
-.cinnamon/
-.config/
-.dbus/
-.dmrc
-.gconf/
-.gitconfig
-.gnome2/
-.lesshst
-.linuxmint/
-.local/
-.m2/
-.mozilla/
-.pki/
-.profile
-.ssh/
-.vim/
-.viminfo
-.xsession-errors
-Downloads/
-code/
 tmp/
+pgadmin.log
+code/
+Downloads/
+.xsession-errors
+.viminfo
+.vim/
+.ssh/
+.profile
+.pki/
+.pgpass
+.pgadmin_histoqueries
+.mozilla/
+.m2/
+.local/
+.linuxmint/
+.lesshst
+.gnome2/
+.gitconfig
+.gconf/
+.dmrc
+.dbus/
+.config/
+.cinnamon/
+.cache/
+.bash_logout
+.bash_history
+.bash/
+.aptitude/
+.Xauthority
+.ICEauthority
+
