added incsearch to vimrc. Installed python-pip

--- a/.gitignore
+++ b/.gitignore
@@ -3,19 +3,23 @@ pgadmin.log
 code/
 Downloads/
 .xsession-errors
+.xinputrc
 .viminfo
 .vim/
 .ssh/
 .profile
 .pki/
+.pip/
 .pgpass
 .pgadmin_histoqueries
+.pam_environment
 .mozilla/
 .m2/
 .local/
 .linuxmint/
 .lesshst
 .gnome2/
+.gksu.lock
 .gitconfig
 .gconf/
 .dmrc
@@ -29,4 +33,3 @@ Downloads/
 .aptitude/
 .Xauthority
 .ICEauthority
-
