--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 tmp/
 pgadmin.log
+igv/
 code/
 Pictures/
 Downloads/
@@ -32,6 +33,7 @@ Downloads/
 .gitconfig
 .gem/
 .gconf/
+.fonts/
 .dmrc
 .dbus/
 .config/
