--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,54 @@
-tmp/
-pgadmin.log
-igv/
-export.sh
-code/
-Pictures/
-Downloads/
-.xsession-errors
-.xinputrc
-.viminfo
-.vim/
-.ssh/
-.slocdata/
-.rbenv/
-.qgis2/
-.psql_history
-.profile
-.pki/
-.pip/
-.pgpass
-.pgadmin_histoqueries
-.pgadmin3
-.pam_environment
-.oracle_jre_usage/
-.npm/
-.mysql
-.mozilla/
-.m2/
-.local/
-.linuxmint/
-.lesshst
-.java
-.gnome2/
-.gnome/
-.gksu.lock
-.gitconfig
-.gem/
-.gconf/
-.fonts/
-.dmrc
-.dbus/
-.config/
-.cinnamon/
-.cache/
-.byebug_hist
-.bash_logout
-.bash_history
-.bash/
-.aptitude/
-.Xauthority
-.IntelliJIdea14/
 .ICEauthority
+.IntelliJIdea14/
+.Xauthority
+.aptitude/
+.bash/
+.bash_history
+.bash_logout
+.byebug_hist
+.cache/
+.cinnamon/
+.config/
+.dbus/
+.dmrc
+.fonts/
+.gconf/
+.gem/
+.gitconfig
+.gksu.lock
+.gnome/
+.gnome2/
+.java
+.lesshst
+.linuxmint/
+.local/
+.m2/
+.macromedia/
+.mozilla/
+.mysql
+.npm/
+.oracle_jre_usage/
+.pam_environment
+.pgadmin3
+.pgadmin_histoqueries
+.pgpass
+.pip/
+.pki/
+.profile
+.psql_history
+.qgis2/
+.rbenv/
+.slocdata/
+.ssh/
+.vim/
+.viminfo
+.xinputrc
+.xsession-errors
+Downloads/
+Pictures/
+code/
+docs/
+export.sh
+igv/
+pgadmin.log
+tmp/
