Ignore more files

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@
 .gnome/
 .gnome2/
 .gnupg/
+.hplip/
 .java
 .lesshst
 .linuxmint/
@@ -38,11 +39,13 @@
 .pki/
 .profile
 .psql_history
+.python_history
 .qgis2/
 .rbenv/
 .slocdata/
 .ssh/
 .thumbnails/
+.thunderbird/
 .vim/
 .viminfo
 .xinputrc
