Ignore .passenger directory

--- a/.gitignore
+++ b/.gitignore
@@ -1,60 +1,61 @@
-.ICEauthority
-.IntelliJIdea14/
-.Xauthority
-.aptitude/
-.bash/
-.bash_history
-.bash_logout
-.byebug_hist
-.cache/
-.cinnamon/
-.config/
-.dbus/
-.dmrc
-.fonts/
-.gconf/
-.gem/
-.gimp-2.8/
-.gitconfig
-.gksu.lock
-.gnome/
-.gnome2/
-.gnupg/
-.hplip/
-.java
-.lesshst
-.linuxmint/
-.local/
-.m2/
-.macromedia/
-.mozilla/
-.mysql
-.npm/
-.oracle_jre_usage/
-.pam_environment
-.pgadmin3
-.pgadmin_histoqueries
-.pgpass
-.pip/
-.pki/
-.profile
-.psql_history
-.python_history
-.qgis2/
-.rbenv/
-.slocdata/
-.ssh/
-.thumbnails/
-.thunderbird/
-.vim/
-.viminfo
-.xinputrc
-.xsession-errors
-Downloads/
-Pictures/
-code/
-docs/
-export.sh
-igv/
-pgadmin.log
 tmp/
+pgadmin.log
+igv/
+export.sh
+docs/
+code/
+Pictures/
+Downloads/
+.xsession-errors
+.xinputrc
+.viminfo
+.vim/
+.thunderbird/
+.thumbnails/
+.ssh/
+.slocdata/
+.rbenv/
+.qgis2/
+.python_history
+.psql_history
+.profile
+.pki/
+.pip/
+.pgpass
+.pgadmin_histoqueries
+.pgadmin3
+.passenger/
+.pam_environment
+.oracle_jre_usage/
+.npm/
+.mysql
+.mozilla/
+.macromedia/
+.m2/
+.local/
+.linuxmint/
+.lesshst
+.java
+.hplip/
+.gnupg/
+.gnome2/
+.gnome/
+.gksu.lock
+.gitconfig
+.gimp-2.8/
+.gem/
+.gconf/
+.fonts/
+.dmrc
+.dbus/
+.config/
+.cinnamon/
+.cache/
+.byebug_hist
+.bash_logout
+.bash_history
+.bash/
+.aptitude/
+.Xauthority
+.IntelliJIdea14/
+.ICEauthority
